# genoa

./: .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml  requirements.txt
data/gecko-files/: basic_species.txt  concentration.ini  my_param.sh  simu.nml  solarlight.phot
data/ssh-aerosol-files/: namelist_v2
runtime/scripts/: run_job.sh
src/genoa/: __init__.py  __main__.py  build.py  constants.py  env_parameters.py  error_analysis.py  folder_path.py  gecko_cst.py  gecko_in.py  gecko_out.py  genoa.py  jumping.py  kinetics.py  logger.py  lumping.py  mcm.py  mechanism_in.py  mechanism_out.py  mechanism_pack.py  mechanism_relation.py  mechanism_update.py  mechgen.py  photolysis.py  plotting_basic.py  plotting_flowchart.py  plotting_run.py  postprocess_conc.py  postprocess_gecko.py  postprocess_rec.py  postprocess_run.py  postprocess_ssh.py  rate.py  rate_constant.py  reaction.py  record.py  reduction_basic.py  reduction_print.py  reduction_run.py  reduction_setting.py  reduction_strategy.py  (+28 more)
test_cases/conditions/U6/: simu.nml
test_cases/conditions/U6/1conds/: simple
test_cases/conditions/U6/4conds/: simple_noHV  urban  urban_noHV
test_cases/config/: 1_build.ini  2_build_run.ini  3_run.ini  4_run_compare.ini  5_threshold_reduction.ini  6_training.ini  6_training_parameters.csv  7_testing.ini  8_reductions.ini  9_postprocess.ini  config_reference.ini  parameter_reference.csv
test_cases/input/fromGCK/U6_GECKO-A/: dictionary.out  gasspe.dum  partspe.dum  screeninfo.out  size.dum  wallspe.dum
test_cases/input/mech/: record_T.txt
(+51 files in other folders)
