[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genoa"
version = "3.0.0"
authors = [{ name = "Zhizhao Wang", email = "zhizhaow@ucr.edu" }]
description = "GENOA v3.0: Generator of Optimized Atmospheric chemical mechanisms"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPLv3" }
urls = { "Homepage" = "https://github.com/zhizhaow/genoa-dev" }
dependencies = [
  "attrs",
  "numpy",
  "matplotlib",
  "graphviz",
  "cairosvg",
  "netCDF4",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
genoa = "genoa.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 120
